Use Java 17 language features (#1749)
* Use Java 17 pattern matching instanceof

Makes the code easier to read by avoding the cast that often follows
an instanceof.

* Use Java 17 @Serial annotation

Annotation that may allow future checks for serialization.  No real
benefit today as far as I can tell.

* Use Java 17 string formatting

Slight simplification of the code through OpenRewrite